factored play button handler, fixed api loading, fixed svg appearance on firefox

--- a/assets/styles/components/_player.scss
+++ b/assets/styles/components/_player.scss
@@ -66,16 +66,23 @@
             }
 
             .icon {
+                @include transition();
                 position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                opacity: 0;
+            }
 
-                svg {
-                    @include transition();
-                    opacity: 0;
-                    transform: scale(0.5);
-                }
+            &.is-buffering .buffer,
+            &.is-muted .mute,
+            &.is-paused .play,
+            &.is-playing .pause {
+                opacity: 1;
             }
 
             &.mdl-badge[data-badge] {
@@ -92,14 +99,6 @@
                 top: 10px;
                 right: 10px;
               }
-            }
-
-            &.is-buffering .buffer,
-            &.is-muted .mute,
-            &.is-paused .play,
-            &.is-playing .pause {
-                opacity: 1;
-                transform: scale(1);
             }
         }
 
