--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -97,6 +97,7 @@
 
         svg {
             @include transition();
+            width: 30px;
             height: 30px;
         }
 
